# mcp_analyze_quality

./: CURSOR_SETUP.md  README.md  alert_config.json  main.py  mcp_config.json  meminfo.csv  pyproject.toml  requirements.txt  setup_cursor.py  setup_git_deploy.py  test_mcp.py  test_meminfo.py
.cursor/rules/: quality-rules.mdc
