[project]
name = "mcp-analyze-quality"
version = "0.1.0"
description = "MCP Performance Analysis Server - Focused on critical performance issue detection with concise output"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.9.4",
    "fastmcp>=2.8.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
